--- a/sharkss/index.html
+++ b/sharkss/index.html
@@ -23,9 +23,9 @@
                 </div>
                 <div id='info'>
                     <ul id='navbar'>
-                        <li class='item'> About Sharks</li>
-                        <li class='item'> Quiz</li>
-                        <li class='item'> About Us</li>
+                        <li class='item'> <p>About Sharks</p></li>
+                        <li class='item'> <p>Quiz</p></li>
+                        <li class='item'> <p>About Us</p></li>
                     </ul>
 
                     
