--- a/sharkss/index.html
+++ b/sharkss/index.html
@@ -23,9 +23,9 @@
                 </div>
                 <div id='info'>
                     <ul id='navbar'>
-                        <li class='item'> <p>About Sharks</p></li>
-                        <li class='item'> <p>Quiz</p></li>
-                        <li class='item'> <p>About Us</p></li>
+                        <li class='item'><a href='sharks.html'> <p>About Sharks</p></a></li>
+                        <li class='item'><a href='quiz.html'>  <p>Quiz</p></a></li>
+                        <li class='item'><a href='about.html'>  <p>About Us</p></a></li>
                     </ul>
 
                     
