--- a/sharkss/index.html
+++ b/sharkss/index.html
@@ -18,7 +18,7 @@
     <body>
         <div id='head' class='container-fluid'>
             <div id='splash'>
-                <div id='blackCurtain'>
+                <div id='blackCurtain' class='fadeBlack'>
 
                 </div>
                 <div id='info'>
