--- a/sharkss/index.html
+++ b/sharkss/index.html
@@ -23,9 +23,9 @@
                 </div>
                 <div id='info'>
                     <ul id='navbar'>
-                        <li class='item'><a class='btnSplash' id='sharks.html'> <p>Fun Facts</p></a></li>
-                        <li class='item'><a class='btnSplash' id='quiz.html'>  <p>Shark Behavior</p></a></li>
-                        <li class='item'><a class='btnSplash' id='about.html'>  <p>Quiz</p></a></li>
+                        <li class='item'> <a href='./facts.html' class='navitem'><p>Fun Facts</p>     </a> </li>
+                        <li class='item'> <a href='/quiz.html' class='navitem'> <p>Shark Behavior</p></a></li>
+                        <li class='item'>  <a href='/abput.html' class='navitem'><p>Quiz</p>         </a> </li>
                     </ul>
 
                     
