--- a/sharkss/index.html
+++ b/sharkss/index.html
@@ -23,12 +23,11 @@
                 </div>
                 <div id='info'>
                     <ul id='navbar'>
+                        <li class='item'> <a href='./about.html' class='navitem'> <p>Species</p></a></li>
                         <li class='item'> <a href='./facts.html' class='navitem'><p>Fun Facts</p>     </a> </li>
-                        <li class='item'> <a href='/quiz.html' class='navitem'> <p>Shark Behavior</p></a></li>
-                        <li class='item'>  <a href='/abput.html' class='navitem'><p>Quiz</p>         </a> </li>
+                        <li class='item'>  <a href='./quiz.html' class='navitem'><p>Quiz</p>         </a> </li>
                     </ul>
 
-                    
                 </div>
             </div>
         </div> 
