--- a/sharkss/facts.html
+++ b/sharkss/facts.html
@@ -47,9 +47,9 @@
                 <div id='f_OBody'>
                     <div id='f_lists'>
                         <ul>
-                            <li>•There are 440 known shark species of sharks. </li>
-                            <li>•The largest species of sharks are the whale sharks which can grow up to 60 feet long.</li>
-                            <li>•The smallest species  of sharks are the dwarf lantern sharks and it can be as short as 4 inches.</li>
+                            <li>There are 440 known shark species of sharks. </li>
+                            <li>The largest species of sharks are the whale sharks which can grow up to 60 feet long.</li>
+                            <li>The smallest species  of sharks are the dwarf lantern sharks and it can be as short as 4 inches.</li>
                         </ul>
                     </div>
                     
