--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
 
         
         <link rel="stylesheet" type="text/css" href="css/main.css">
-
+        <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+        
         <script src='main.js'></script>
     </head>
 
     <body>
         <div id='head' class='jumbotron'>
-            <div id='SharkBK' class='jumbotron'>
+            <div id='SharkBK' class='jumbotron Home'>
             </div>
             <div id='IsolateBar'> 
                 <p>Sharks</p>
             </div>
             <ul id='STNavBar' class='STnav'>
                 <li></li>
-                <li class='allow'><a href='#body' class='STitem'><p>Home</p></a></li>
+                <li class='allow NavSelected'><a href='#body' class='STitem'><p>Home</p></a></li>
                 <li></li>
-                <li class='allow'><a class='STitem'><p>Quiz</p></a></li>
+                <li class='allow'><a class='STitem' href='./quiz.html'><p>Quiz</p></a></li>
                 <li></li>
                 <li class='allow dropDown'><a class='STitem'><p>About</p></a></li>
                 <li></li>
