--- a/index.html
+++ b/index.html
@@ -52,12 +52,23 @@
         </div>
         <div id='body'>
             <center>
-            <h3>About the website</h3>
-            <div id='introBody'>
-                <p>Our topic is information about sharks. Our website will help people learn what all sharks have in common but also help people identify different sharks by their unique appearances. It will also explain how some sharks adapted to their environment  over millions of years. The main goal of our website is to give you a better understanding of sharks and to learn something you didn't know prior to visiting the website.</p>
+            <section class='parallax' id='indexTop'>
+                <div style='padding: 10vh 25vw;'>
+                    <h3 style='padding: 10vh 5vw;border: 2px solid black;background-color:rgba(101, 142, 230, 0.85);'>About the website</h3>
+                </div>
+            </section>
+            <div id='introBody' >
+                <p style='padding: 15vh 0vw;'>Our topic is information about sharks. Our website will help people learn what all sharks have in common but also help people identify different sharks by their unique appearances. It will also explain how some sharks adapted to their environment  over millions of years. The main goal of our website is to give you a better understanding of sharks and to learn something you didn't know prior to visiting the website.</p>
 
             </div>
             </center>
+            <section class='parallax' id='indexCat'>
+                <center>
+                <div style='padding: 10vh 25vw;'>
+                    <h3 style='padding: 10vh 5vw;border: 2px solid black;background-color:rgba(101, 142, 230, 0.85);'>Sub-Topics:</h3>
+                </div>
+            </center>
+            </section>
             <div id='info'>
                 <div id='infoTwo'>
                     <div class='infoIndex cardInfo' id='behaviour'>
@@ -81,13 +92,17 @@
 
                 </div>
                 </center>
-
+                <section class='parallax' id='indexP'>
+                    <div id='quizIn'>
+                        <div class='infoIndex' id='quizIndex'>
+                            <h1>Test your knowlegde</h1>
+                            <p> Test your knowledge of sharks and take this fun quiz! </p>
+                            <a href='.\quiz.html'><p>Take it!</p></a>
+                        </div>
+                    </div>
+                </section>
                 <center>
-                <div class='infoIndex' id='quizIndex'>
-                    <h1>Test your knowlegde</h1>
-                    <p> by taking this quiz </p>
-                    <a href='.\quiz.html'><p>Take it!</p></a>
-                </div>
+               
             </center>
             </div>
         </div>
