--- a/facts.html
+++ b/facts.html
@@ -53,9 +53,12 @@
         </div>
         <div id='body'>
             <center>
-                <h1>Fun Facts</h1>
+                <section class='parallax' id='FFB' style='background-image:url("https://images5.alphacoders.com/310/310158.jpg");'>
+                    <h1 >Fun Facts</h1>
 
-                <ul id='list'>
+                </section>
+
+                <ul id='listFacts'>
                     <li>There are <strong>440</strong> known shark species of sharks.</li>
                     <li>The largest species of sharks are the whale sharks which can grow up to 60 feet long.</li>
                     <li>The smallest species  of sharks are the dwarf lantern sharks and it can be as short as 4 inches.</li>
@@ -63,6 +66,10 @@
                     <li>Scientist believe that sharks most likely attack humans because they mistake humans for fishes.</li>
                     <li>Shark have no bones.Their skeletons are made up of cartilage and tissues just like jelly fish and rays.</li>
                     <li>Female sharks have thicker skin than male sharks because male sharks bite during mating. </li>
+                    <li>Sharks can smell blood from over a mile away.</li>
+                    <li>Unlike fish, sharks can only swim forward. This is because of it’s stiff fins.</li>
+                    <li>An average shark has 40-45 teeth in up to seven rows. Sharks lose teeth regularly and can go through 30,000 teeth in their lifetime.</li>
+            
                 </ul>
             </center>
         </div>
